<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="viewModel"
            type="com.example.barberappsecproject.ui.login.LoginViewModel"/>
    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/tv_label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_label_title"
        android:textColor="@color/teal_200"
        android:layout_marginTop="40dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/iv_logo"
        android:src="@drawable/logo_barbershop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_title"
        android:layout_marginVertical="@dimen/common_margin"
        android:layout_width="@dimen/login_iv_size"
        android:layout_height="@dimen/login_iv_size" />

    <EditText
        android:layout_marginTop="@dimen/common_margin"
        android:id="@+id/et_mobile_no"
        android:text="@={viewModel.mobileNo}"
        android:hint="@string/mobile_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"/>

    <EditText
        android:id="@+id/et_password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@={viewModel.password}"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/et_mobile_no"/>

    <Button
        android:layout_marginTop="36dp"
        android:id="@+id/btn_sign_in"
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/et_password"/>

    <TextView
        android:layout_marginTop="@dimen/small_margin"
        android:id="@+id/tv_forget_password"
        android:text="@string/foreget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_marginTop="@dimen/small_margin"
        android:id="@+id/tv_skip"
        android:text="@string/skip"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tv_no_account"
        android:text="@string/have_no_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/small_margin"
        android:gravity="center_horizontal"/>







</androidx.constraintlayout.widget.ConstraintLayout>
</layout>