<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding"
    tools:context=".ui.register.RegisterActivity">


    <ImageView
        android:id="@+id/iv_logo"
        android:src="@drawable/logo_barbershop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/common_margin"
        android:layout_width="160dp"
        android:layout_height="160dp" />

    <TextView
        android:layout_marginTop="@dimen/common_margin"
        android:id="@+id/tv_label_mobile_no"
        android:text="@string/mobile_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"/>

    <EditText
        android:id="@+id/et_mobile_no"
        android:hint="@string/mobile_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/tv_label_mobile_no"/>


    <TextView
        android:id="@+id/tv_label_password"
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/et_mobile_no"/>

    <EditText
        android:id="@+id/et_password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/tv_label_password"/>


    <TextView
        android:id="@+id/tv_label_confirm_password"
        android:text="@string/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/et_password"/>

    <EditText
        android:id="@+id/et_confirm_password"
        android:hint="@string/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/tv_label_confirm_password"/>

    <Button
        android:layout_marginTop="@dimen/common_margin"
        android:id="@+id/btn_sign_up"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@id/et_confirm_password"/>


    <TextView
        android:id="@+id/tv_account"
        android:text="@string/have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/small_margin"
        android:gravity="center_horizontal"/>



</androidx.constraintlayout.widget.ConstraintLayout>