<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.dashboard.DashboardActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    style="@style/ThemeOverlay.AppCompat.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_700"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:id="@+id/iv_banner"
                    android:scaleType="fitXY"
                    android:src="@drawable/salon_banner"

                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:id="@+id/tv_item_book"
                    android:layout_width="match_parent"
                    android:layout_height="70sp"
                    android:text="@string/book"
                    android:gravity="center"
                    android:layout_margin="@dimen/large_margin"
                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:background="@drawable/view_rec_shape"
                    app:layout_constraintTop_toBottomOf="@id/iv_banner"/>

                <TextView
                    android:id="@+id/tv_item_service"
                    android:layout_margin="@dimen/large_margin"
                    android:layout_width="match_parent"
                    android:layout_height="70sp"
                    android:gravity="center"
                    android:text="@string/service"
                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:background="@drawable/view_rec_shape"
                    app:layout_constraintTop_toBottomOf="@id/tv_item_book"/>

                <TextView
                    android:id="@+id/tv_item_hour"
                    android:layout_width="match_parent"
                    android:layout_height="70sp"
                    android:gravity="center"
                    android:text="@string/hour"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/large_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:background="@drawable/view_rec_shape"
                    app:layout_constraintTop_toBottomOf="@id/tv_item_service"/>

                <TextView
                    android:id="@+id/tv_item_more"
                    android:layout_width="match_parent"
                    android:layout_height="70sp"
                    android:text="@string/explore"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_margin="@dimen/large_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:background="@drawable/view_rec_shape"
                    app:layout_constraintTop_toBottomOf="@id/tv_item_hour"/>

                <TextView
                    android:id="@+id/tv_item_about"
                    android:layout_width="match_parent"
                    android:layout_height="70sp"
                    android:text="@string/about"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/large_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:background="@drawable/view_rec_shape"
                    app:layout_constraintTop_toBottomOf="@id/tv_item_more"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/layout_profile"
             />

</androidx.drawerlayout.widget.DrawerLayout>